infrastructure/terraform/staging/launch_templates.tf
resource "aws_launch_template" "labdao_requester" {
  name = "labdao-${var.environment}-public-lt"

  credit_specification {
    cpu_credits = "standard"
  }

  image_id = data.aws_ami.ubuntu_latest.id

  instance_type = var.requester_instance_type

  key_name = var.ssh_key

  metadata_options {
    http_endpoint          = "enabled"
    http_tokens            = "optional"
    instance_metadata_tags = "enabled"
  }

  block_device_mappings {
    device_name = "/dev/sda1"

    ebs {
      volume_size = 100
      volume_type = "gp3"

    }
  }

  monitoring {
    enabled = true
  }

  network_interfaces {
    associate_public_ip_address = true
    # TODO: add a closed SG for LB -> Requester traffic
    security_groups = [aws_security_group.labdao_public_bacalhau.id, aws_security_group.labdao_public_plex.id, aws_security_group.labdao_public_ssh.id, aws_security_group.labdao_egress_all.id, aws_security_group.labdao_private.id]
  }

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "labdao-${var.environment}-requester"
      Env  = "${var.environment}"
      Type = "requester"
    }
  }
  user_data = base64encode(templatefile("${path.module}/files/userdata.sh", { name = var.environment }))
}

resource "aws_launch_template" "labdao_compute" {
  name = "labdao-${var.environment}-compute-lt"

  credit_specification {
    cpu_credits = "standard"
  }

  image_id = data.aws_ami.ubuntu_latest.id

  instance_type = var.compute_instance_type

  key_name = var.ssh_key

  metadata_options {
    http_endpoint          = "enabled"
    http_tokens            = "optional"
    instance_metadata_tags = "enabled"
  }

  block_device_mappings {
    device_name = "/dev/sda1"

    ebs {
      volume_size = 1000
      volume_type = "gp3"
    }
  }

  monitoring {
    enabled = true
  }

  network_interfaces {
    associate_public_ip_address = true
    security_groups             = [aws_security_group.labdao_public_ssh.id, aws_security_group.labdao_egress_all.id, aws_security_group.labdao_private.id]
    # subnet_id                   = aws_subnet.labdao_public.id
  }

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "labdao-${var.environment}-compute"
      Env  = "${var.environment}"
      Type = "compute_only"
    }
  }

  user_data = base64encode(templatefile("${path.module}/files/userdata.sh", { name = var.environment }))
}
